--- a/tscu_manual.tex
+++ b/tscu_manual.tex
@@ -128,6 +128,7 @@ Time elapsed (sec).......................: 5.77
 \end{verbatim}
 \end{scriptsize}
 
+You can find more examples and their corresponding outputs \verb|
 \section{Options}
 There are varios options that you may want to use. Each option should be given with a key-value pair like \texttt{tscu(trn,tst,'Option1','value1','Option2','value2')}. Available options can be listed by running \texttt{help tscu} or \texttt{doc tscu} on MATLAB assuming that \texttt{tscu.m} is on the working directory or in the path.
 
@@ -216,5 +217,6 @@ tscu(trn,tst,'alignment','CDTW','DTWbandwidth',6)
 \end{itemize}
 \bibliographystyle{unsrt}
 \bibliography{references}
+
 
 \end{document}
